# fastoauth

./: .gitignore  README.MD  README_zh.MD  pyproject.toml  requirements.txt  打包和上传.txt
fastoauth/: __init__.py  _redis.py  oauth.py  schemas.py
fastoauth/sample/: __init__.py  oauth_server.py
fastoauth/test/: __init__.py  test_oauth2.py
fastoauth/util/: __init__.py  singleton.py
